user-service/k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-stg-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-stg-service
  template:
    metadata:
      labels:
        app: user-stg-service
    spec:
      containers:
        - name: user-stg-service
          image: user-service-dev
          imagePullPolicy: Never
          ports:
            - containerPort: 3007
          workingDir: /app   
          command: ["npm", "run", "start" ]
