user-service/k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-stg-service
spec:
  selector:
    app: user-stg-service
  ports:
    - port: 100
      targetPort: 3007
